# burn-scar-mapping

./: CLAUDE.md  README.md  config.json  layout.json  spec.yaml
ecoscope-workflows-burn-scar-mapping-workflow/: Dockerfile  README.md  pixi.toml  pyproject.toml
ecoscope-workflows-burn-scar-mapping-workflow/burn-scar-tasks/: pyproject.toml
ecoscope-workflows-burn-scar-mapping-workflow/burn-scar-tasks/burn_scar_tasks/: __init__.py
ecoscope-workflows-burn-scar-mapping-workflow/ecoscope_workflows_burn_scar_mapping_workflow/: cli.py  params.json  rjsf.json
ecoscope-workflows-burn-scar-mapping-workflow/ecoscope_workflows_burn_scar_mapping_workflow/dags/: run_sequential.py  run_sequential_mock_io.py
ecoscope-workflows-burn-scar-mapping-workflow/tests/: conftest.py  test_metadata.py
ecoscope-workflows-cfw-burn-scar-mapping-workflow/: Dockerfile  README.md  pixi.toml  pyproject.toml
ecoscope-workflows-cfw-burn-scar-mapping-workflow/burn-scar-tasks/burn_scar_tasks/: __init__.py
ecoscope-workflows-cfw-burn-scar-mapping-workflow/ecoscope_workflows_cfw_burn_scar_mapping_workflow/: cli.py  params.json
ecoscope-workflows-cfw-burn-scar-mapping-workflow/ecoscope_workflows_cfw_burn_scar_mapping_workflow/dags/: run_sequential.py  run_sequential_mock_io.py
ecoscope-workflows-cfw-burn-scar-mapping-workflow/tests/: conftest.py  test_metadata.py
